# bookrec

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES_v0.2.1.md  bookrec  debug_catalog.py  main.py  pyproject.toml  requirements.txt  smoke_fetch.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
.sisyphus/plans/: bookrec-v2.md
docs/: PUSH_COMMIT_ONLY.md  RELEASING.md  V0.2.3_RELEASE_TODO.md
scripts/git-flow/: README.md  cleanup-branches.sh  merge-feature.sh  new-feature.sh  new-hotfix.sh  new-release.sh  setup-branch-protection.sh
src/cli/: app.py
src/core/: config.py
src/data_sources/: base.py  douban.py
src/knowledge/: store.py
src/models/: book.py
src/output/: markdown_gen.py
src/services/: filter.py  orchestrator.py
tests/: test_book_model.py  test_cli.py  test_douban_anti_scrape.py  test_douban_category.py  test_douban_fetch.py  test_douban_parser.py  test_filter.py  test_markdown_gen.py  test_orchestrator.py  test_search_note.py  test_store.py
