[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookrec"
version = "0.2.1"
description = "书籍推荐自动化工具 - 从豆瓣抓取经管/AI类好书，沉淀到知识库"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dateutil>=2.8.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
keywords = [
    "books",
    "recommendation",
    "douban",
    "obsidian",
    "cli",
    "scraping",
]

[project.urls]
Homepage = "https://github.com/huisystems/bookrec"
Repository = "https://github.com/huisystems/bookrec.git"
"Bug Tracker" = "https://github.com/huisystems/bookrec/issues"

[project.scripts]
bookrec = "src.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
